[workspace]
resolver = "2"

members = ["drink", "drink/test-macro", "drink-cli"]

exclude = ["examples/"]

[workspace.package]
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
homepage = "https://github.com/use-ink/drink"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/use-ink/drink"
version = "0.19.0-alpha"

[workspace.dependencies]
anyhow = { version = "1.0.94" }
cargo_metadata = { version = "0.18.1" }
clap = { version = "4.3.4" }
contract-build = { git = "https://github.com/use-ink/cargo-contract" }
contract-metadata = { git = "https://github.com/use-ink/cargo-contract" }
contract-transcode = { git = "https://github.com/use-ink/cargo-contract" }
convert_case = { version = "0.6.0" }
crossterm = { version = "0.26.0" }
darling = { version = "0.20.3" }
parity-scale-codec = { version = "3.6.9" }
parity-scale-codec-derive = { version = "3.6.9" }
paste = { version = "1.0.7" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
ratatui = { version = "0.21.0" }
scale-info = { version = "2.10.0" }
serde_json = { version = "1.0.133" }
syn = { version = "2" }
thiserror = { version = "1.0.40" }
wat = { version = "1.0.71" }
ink_sandbox = { git = "https://github.com/use-ink/ink" }
ink_primitives = { git = "https://github.com/use-ink/ink" }

# Substrate dependencies

frame-system = { version = "40.1.0" }
frame-support = { version = "40.1.0" }
sp-runtime-interface = { version = "29.0.1" }

# Local dependencies

drink = { version = "=0.19.0-alpha", path = "drink" }
drink-test-macro = { version = "=0.19.0-alpha", path = "drink/test-macro" }
