[package]
name = "mocking"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/use-ink/drink"
version = "0.1.0"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", default-features = false }

[dev-dependencies]
drink = { path = "../../drink" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
